fix: invert the color of warning text to make it better readable

--- a/src/lib/components/modes/treemode/ValidationError.scss
+++ b/src/lib/components/modes/treemode/ValidationError.scss
@@ -4,7 +4,7 @@
 button.jse-validation-error {
   @include jsoneditor-button;
 
-  color: var(--jse-message-warning-background);
+  color: var(--jse-warning-color);
   padding: 0 $input-padding;
   margin: 0;
   font-size: var(--jse-font-size-mono);
