--- a/src/lib/themes/jse-theme-default.css
+++ b/src/lib/themes/jse-theme-default.css
@@ -18,6 +18,7 @@
   --jse-text-color: #4d4d4d;
   --jse-text-color-inverse: #fff;
   --jse-error-color: #ee5341;
+  --jse-warning-color: #fdc539;
 
   /* main, menu, modal */
   --jse-main-border: 1px solid #d7d7d7;
@@ -108,8 +109,8 @@
   /* messages */
   --jse-message-error-background: var(--jse-error-color);
   --jse-message-error-color: var(--jse-text-color-inverse);
-  --jse-message-warning-background: #fdc539;
-  --jse-message-warning-color: var(--jse-text-color-inverse);
+  --jse-message-warning-background: #ffde5c;
+  --jse-message-warning-color: var(--jse-text-color);
   --jse-message-success-background: #9ac45d;
   --jse-message-success-color: var(--jse-text-color-inverse);
   --jse-message-info-background: #9d9d9d;
