--- a/src/lib/themes/jse-theme-dark.css
+++ b/src/lib/themes/jse-theme-dark.css
@@ -12,6 +12,13 @@
   --jse-modal-overlay-background: rgba(0, 0, 0, 0.5);
   --jse-modal-code-background: #2f2f2f;
 
+  /* tooltip in text mode */
+  --jse-tooltip-color: var(--jse-text-color);
+  --jse-tooltip-background: #4b4b4b;
+  --jse-tooltip-border: 1px solid #737373;
+  --jse-tooltip-action-button-color: inherit;
+  --jse-tooltip-action-button-background: #737373;
+
   /* panels: navigation bar, gutter, search box */
   --jse-panel-background: #333333;
   --jse-panel-background-border: 1px solid #464646;
