chore: move `calculateVisibleSection` into `logic/table.ts`

--- a/src/lib/components/modes/tablemode/TableMode.scss
+++ b/src/lib/components/modes/tablemode/TableMode.scss
@@ -50,7 +50,7 @@
           vertical-align: top;
           white-space: nowrap;
           max-width: 400px;
-          overflow: hidden; // TODO: wrap instead?
+          overflow: hidden;
 
           &.jse-table-cell-header,
           &.jse-table-cell-gutter {
