--- a/src/lib/components/modes/treemode/json-node-selected-mixin.scss
+++ b/src/lib/components/modes/treemode/json-node-selected-mixin.scss
@@ -78,6 +78,18 @@
     }
   }
 
+  &.jse-readonly {
+    .jse-header,
+    .jse-contents,
+    .jse-meta,
+    .jse-expand,
+    .jse-footer,
+    :global(.jse-key),
+    :global(.jse-value) {
+      cursor: default !important; // TODO: get rid of the !important here
+    }
+  }
+
   .jse-insert-area {
     &.jse-selected {
       z-index: 2;
