--- a/src/lib/components/modes/treemode/json-node-selected-mixin.scss
+++ b/src/lib/components/modes/treemode/json-node-selected-mixin.scss
@@ -85,7 +85,8 @@
     .jse-expand,
     .jse-footer,
     :global(.jse-key),
-    :global(.jse-value) {
+    :global(.jse-value),
+    :global(.jse-collapsed-items) {
       cursor: default !important; // TODO: get rid of the !important here
     }
   }
