fix: #178 showing `cursor: grab` in read-only mode
* fix: #178 showing `cursor: grab` in read-only mode

* fix: add the `jse-collapsed-items` class to the `jse-readonly` section

--- a/src/lib/components/modes/treemode/json-node-selected-mixin.scss
+++ b/src/lib/components/modes/treemode/json-node-selected-mixin.scss
@@ -78,6 +78,19 @@
     }
   }
 
+  &.jse-readonly {
+    .jse-header,
+    .jse-contents,
+    .jse-meta,
+    .jse-expand,
+    .jse-footer,
+    :global(.jse-key),
+    :global(.jse-value),
+    :global(.jse-collapsed-items) {
+      cursor: default !important; // TODO: get rid of the !important here
+    }
+  }
+
   .jse-insert-area {
     &.jse-selected {
       z-index: 2;
