fix: Color Picker should not show `cursor: pointer` in text-only mode

--- a/src/lib/plugins/value/components/ColorPicker.scss
+++ b/src/lib/plugins/value/components/ColorPicker.scss
@@ -14,5 +14,8 @@
   border-radius: 2px;
   background: inherit;
   outline: none;
+}
+
+:global(.jse-json-node:not(.jse-readonly)) .jse-color-picker-button {
   cursor: pointer;
 }
