--- a/src/lib/themes/jse-theme-default.css
+++ b/src/lib/themes/jse-theme-default.css
@@ -29,6 +29,10 @@
   --jse-modal-overlay-background: rgba(0, 0, 0, 0.3);
   --jse-modal-code-background: rgba(0, 0, 0, 0.05);
 
+  /* jsoneditor modal */
+  --jse-modal-theme-color: #707070;
+  --jse-modal-theme-color-highlight: #646464;
+
   /* tooltip in text mode */
   --jse-tooltip-color: var(--jse-text-color);
   --jse-tooltip-background: var(--jse-modal-background);
