--- a/src/lib/plugins/value/components/ColorPicker.scss
+++ b/src/lib/plugins/value/components/ColorPicker.scss
@@ -16,6 +16,6 @@
   outline: none;
 }
 
-:global(.jse-json-node:not(.jse-readonly)) .jse-color-picker-button {
+.jse-color-picker-button:not(.jse-readonly) {
   cursor: pointer;
 }
