fix: highlight TableTag when selected

--- a/src/lib/components/modes/tablemode/tag/TableTag.scss
+++ b/src/lib/components/modes/tablemode/tag/TableTag.scss
@@ -4,6 +4,10 @@
   display: flex;
   gap: 2px;
 
+  &.jse-selected {
+    background: var(--jse-selection-background-color);
+  }
+
   .jse-bracket {
     color: var(--jse-delimiter-color);
   }
