style: padding is included in the clickable area of `.jse-boolean-toggle`

--- a/src/lib/plugins/value/components/BooleanToggle.scss
+++ b/src/lib/plugins/value/components/BooleanToggle.scss
@@ -8,6 +8,6 @@
   height: var(--jse-line-height);
 }
 
-.jse-boolean-toggle:not(.jse-readonly) > :global(svg) {
+.jse-boolean-toggle:not(.jse-readonly) {
   cursor: pointer;
 }
