fix: incorrect cursor style for ColorPicker & BooleanToggle (#184)
* fix: Color Picker should not show `cursor: pointer` in text-only mode

* fix: Boolean Toggle should show `cursor: pointer` in non-text-only mode

* refactor: add class `jse-readonly` to Color Picker & Boolean Toggle to avoid using `:global` in local style

* style: padding is included in the clickable area of `.jse-boolean-toggle`

--- a/src/lib/plugins/value/components/ColorPicker.scss
+++ b/src/lib/plugins/value/components/ColorPicker.scss
@@ -14,5 +14,8 @@
   border-radius: 2px;
   background: inherit;
   outline: none;
+}
+
+.jse-color-picker-button:not(.jse-readonly) {
   cursor: pointer;
 }
