feat: implement validation and error handling in TableMode

--- a/src/lib/components/modes/tablemode/TableMode.scss
+++ b/src/lib/components/modes/tablemode/TableMode.scss
@@ -106,6 +106,14 @@
       }
     }
   }
+
+  .jse-preview {
+    flex: 1;
+    color: var(--jse-panel-color-readonly);
+    overflow: auto;
+    white-space: pre-wrap;
+    padding: 2px;
+  }
 }
 
 // FIXME: this is ugly. give JSONValue an extra class instead
