--- a/src/lib/themes/jse-theme-dark.css
+++ b/src/lib/themes/jse-theme-dark.css
@@ -58,6 +58,7 @@
   --jse-selection-background-light-color: #333333;
   --jse-hover-background-color: #343434;
   --jse-active-line-background-color: rgba(255, 255, 255, 0.06);
+  --jse-search-match-background-color: rgba(45, 98, 34, 0.99);
 
   /* contents: section of collapsed items in an array */
   --jse-collapsed-items-background-color: #333333;
