fix: padding on the right side of an InlineValue

--- a/src/lib/components/modes/tablemode/tag/InlineValue.scss
+++ b/src/lib/components/modes/tablemode/tag/InlineValue.scss
@@ -6,6 +6,7 @@
   line-height: var(--jse-line-height);
   border: none;
   padding: 0;
+  padding-right: $padding-half;
   background: transparent;
   color: inherit;
   cursor: pointer;
