fix: some padding fixes in TableMode

--- a/src/lib/components/modes/tablemode/TableMode.scss
+++ b/src/lib/components/modes/tablemode/TableMode.scss
@@ -139,5 +139,8 @@
 .jse-table-cell :global(.jse-value) {
   overflow-wrap: normal;
   white-space: nowrap;
-  padding-left: 0;
+
+  &:first-child {
+    padding-left: 0;
+  }
 }
