--- a/src/lib/plugins/value/components/TimestampTag.scss
+++ b/src/lib/plugins/value/components/TimestampTag.scss
@@ -1,18 +1,10 @@
 @import '../../../styles';
 
 .jse-timestamp {
-  position: relative;
   padding: 0;
   margin: 0;
-  height: 18px;
-  width: 18px;
-  vertical-align: top;
+  vertical-align: middle;
+  display: inline-flex;
 
   color: var(--jse-value-color-number);
-
-  :global(svg) {
-    position: absolute;
-    top: 1px;
-    right: 0;
-  }
 }
