chore: rename `jse-contents` to `jse-modal-contents` to resolve a duplicate CSS name

--- a/src/lib/components/modals/Modal.scss
+++ b/src/lib/components/modals/Modal.scss
@@ -23,7 +23,7 @@
   background: var(--jse-modal-background);
   color: var(--jse-text-color);
 
-  .jse-contents {
+  .jse-modal-contents {
     padding: 20px;
     overflow: auto;
 
