--- a/src/lib/components/modals/TransformModal.scss
+++ b/src/lib/components/modals/TransformModal.scss
@@ -2,7 +2,7 @@
 @import 'Modal';
 
 .jse-modal.jse-transform {
-  .jse-contents {
+  .jse-modal-contents {
     flex: 1;
     display: flex;
     flex-direction: column;
