--- a/src/lib/components/modals/JSONEditorModal.scss
+++ b/src/lib/components/modals/JSONEditorModal.scss
@@ -2,14 +2,7 @@
 @import 'Modal';
 
 .jse-modal.jse-jsoneditor-modal {
-  .jse-contents {
-  }
-
-  .jse-error {
-    color: var(--jse-error-color);
-  }
-
-  .jse-contents {
+  .jse-modal-contents {
     flex: 1;
     display: flex;
     flex-direction: column;
