fix: overflowing table and text layout in JSONEditorModal

--- a/src/lib/components/modals/JSONEditorModal.scss
+++ b/src/lib/components/modals/JSONEditorModal.scss
@@ -28,6 +28,13 @@
         }
       }
     }
+
+    .jse-modal-inline-editor {
+      flex: 1;
+      min-height: 0;
+      min-width: 0;
+      display: flex;
+    }
   }
 
   .jse-actions {
