--- a/src/lib/components/modals/Modal.scss
+++ b/src/lib/components/modals/Modal.scss
@@ -16,6 +16,8 @@
   flex: 1;
   display: flex;
   flex-direction: column;
+  min-width: 0;
+  min-height: 0;
 
   font-family: var(--jse-font-family);
   font-size: var(--jse-font-size);
@@ -26,6 +28,8 @@
   .jse-modal-contents {
     padding: 20px;
     overflow: auto;
+    min-width: 0;
+    min-height: 0;
 
     .jse-actions {
       display: flex;
@@ -73,7 +77,8 @@
 
 :global(.bg.jse-modal-bg .jse-modal-window.jse-modal-window-jsoneditor) {
   width: 800px;
-  height: 700px;
+  height: auto;
+  min-height: 500px;
   max-height: 80%;
   display: flex;
 }
