feat: show a back button when nested multiple levels in JSONEditorModal

--- a/src/lib/components/modals/Modal.scss
+++ b/src/lib/components/modals/Modal.scss
@@ -39,7 +39,13 @@
       padding-top: $padding;
 
       button {
-        @include jsoneditor-button-primary;
+        &.jse-secondary {
+          @include jsoneditor-button-secondary;
+        }
+
+        &.jse-primary {
+          @include jsoneditor-button-primary;
+        }
       }
     }
   }
