chore: fix Svelte complaining about unused CSS selectors

--- a/src/lib/components/modals/JSONEditorModal.scss
+++ b/src/lib/components/modals/JSONEditorModal.scss
@@ -45,6 +45,12 @@
       flex: 1;
       color: var(--jse-error-color);
     }
+
+    button {
+      &.jse-secondary {
+        @include jsoneditor-button-secondary;
+      }
+    }
   }
 
   input {
