--- a/src/lib/plugins/value/components/ColorPicker.scss
+++ b/src/lib/plugins/value/components/ColorPicker.scss
@@ -7,7 +7,7 @@
   height: var(--jse-color-picker-button-size);
   box-sizing: border-box;
   padding: 0;
-  margin: 0;
+  margin: 2px 0 0;
   display: inline-flex;
   vertical-align: top;
 
