--- a/src/lib/themes/jse-theme-default.css
+++ b/src/lib/themes/jse-theme-default.css
@@ -104,6 +104,7 @@
 
   /* contents: table */
   --jse-table-header-background: #f5f5f5;
+  --jse-table-header-background-highlight: #e8e8e8;
   --jse-table-row-odd-background: rgba(0, 0, 0, 0.05);
 
   /* controls in modals: inputs, buttons, and `a` */
