fix: missing padding of root validation error icon

--- a/src/lib/components/modes/tablemode/TableMode.scss
+++ b/src/lib/components/modes/tablemode/TableMode.scss
@@ -90,6 +90,11 @@
             top: 0;
             z-index: 1;
 
+            .jse-table-root-error {
+              // same padding as .jse-column-header
+              padding: $padding-half var(--jse-padding) $padding-half $padding-half;
+            }
+
             // FIXME: border and/or border shadow?
           }
 
