--- a/src/lib/components/modes/treemode/contextmenu/TreeContextMenu.scss
+++ b/src/lib/components/modes/treemode/contextmenu/TreeContextMenu.scss
@@ -60,6 +60,10 @@
         background: var(--jse-context-menu-background-highlight);
       }
 
+      &:focus {
+        z-index: 1;
+      }
+
       &:disabled {
         color: var(--jse-context-menu-color-disabled);
         background: unset;
