feat: implement right-click context menu for Table mode

--- a/src/lib/components/controls/DropdownButton.scss
+++ b/src/lib/components/controls/DropdownButton.scss
@@ -38,6 +38,10 @@
       background: var(--jse-context-menu-background-highlight);
     }
 
+    &:focus {
+      z-index: 1;
+    }
+
     &:disabled {
       color: var(--jse-context-menu-color-disabled);
       background: unset;
